--- a/public/global.css
+++ b/public/global.css
@@ -37,6 +37,16 @@ ol, ul {
 blockquote, q {
 	quotes: none;
 }
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 
 html {
 	font-family: sans-serif;
